# fastapi-starter

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py  test.db  test.py
app/: __main__.py
app/postgres/: database.py  dependencies.py  models.py
app/postgres/repository/: user_repo.py
app/web/: application.py  lifetime.py
app/web/core/: routers.py
app/web/core/users/: protocols.py  router.py  schemas.py  services.py  views.py
requirements/: dev.txt
